--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <h1>About Me</h1>
         <img src="your-photo.jpg" alt="Your Photo" class="profile-photo">
-        <p>Hello! My name is [Your Name]. I am a student with a passion for [Your Academic Interests].</p>
-        <p>My academic interests include [Briefly describe your academic interests].</p>
+        <p>Hello! My name is Yağız. I am a student with a passion for computer engineering.</p>
+        <p>My academic interests include artificial intelligence and all sorts of stuff.</p>
         <p>Student ID: 820230331</p>
-        <p>GitHub Repository: <a href="https://github.com/itu-itis/introduction-to-information-systems-2024-itu-itis24-yasary23.git" target="_blank">View my project</a></p>
+        <p>GitHub Repository: <a href="https://github.com/itu-itis24-yasary23/101e-tp.git" target="_blank">View my project</a></p>
         <button onclick="location.href='game.html'">Play the Word Prediction Game</button>
     </div>
 </body>
